# Solace-SEMP-Workflow-Automation

./: .coverage  .gitignore  HOWTO.zh-TW.md  Makefile  README.md  TESTS.md  all-modules.md  pyproject.toml
nppBackup/: .gitignore.2026-03-22_121243.bak  .gitignore.2026-03-22_121255.bak  HOWTO.md.2026-03-22_121509.bak  HOWTO.md.2026-03-22_121513.bak  HOWTO.md.2026-03-22_121524.bak  HOWTO.zh-TW.md.2026-03-22_121534.bak  HOWTO.zh-TW.md.2026-03-22_121544.bak
scripts/: build.py
src/semp_workflow/: __init__.py  __main__.py  cli.py  config.py  engine.py  exceptions.py  models.py  output.py  templating.py
src/semp_workflow/modules/: __init__.py  acl_profile.py  base.py  client_profile.py  client_username.py  q_sub.py  queue.py  rdp.py  rdp_qb.py  rdp_rc.py
src/semp_workflow/semp/: client.py  helpers.py
tests/: conftest.py
tests/integration/: conftest.py  test_access_control_lifecycle.py  test_cli_integration.py  test_engine_integration.py  test_queue_lifecycle.py  test_rdp_lifecycle.py  test_semp_client.py
tests/integration/fixtures/: test-artifacts.yaml
tests/unit/: test_cli.py  test_client.py  test_config.py  test_engine.py  test_helpers.py  test_main.py  test_models.py  test_output.py  test_templating.py
tests/unit/test_modules/: test_acl_profile.py  test_client_profile.py  test_client_username.py  test_q_sub.py  test_queue.py  test_rdp.py  test_rdp_qb.py  test_rdp_rc.py
